# PlugnBot

./: .env.example  Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml  rag_pipeline.py  requirements.txt
